# TheForgeTheCmake

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.MD
Common_3/: Application.cmake  AssetPipeline.cmake  CMakeLists.txt  Dependencies.cmake  FSL.cmake  Game.cmake  OS.cmake  Renderer.cmake  SpirVTools.cmake  TheForge.cmake  Utilities.cmake  ozz.cmake  ozz_animation.cmake  ozz_animation_offline.cmake  ozz_base.cmake  ozz_json.cmake
Common_3/Renderer/: Renderer.cmake
Common_3/Tools/: AssetPipeline.cmake  CMakeLists.txt  IrrXML.cmake  SpirVTools.cmake  assimp.cmake  minizip.cmake  ozz_animation.cmake  ozz_animation_offline.cmake  ozz_base.cmake  ozz_json.cmake  rmem.cmake  zlibstatic.cmake
Examples_3/: CMakeLists.txt  PathStatement.CMake.MacOS.txt  PathStatement.CMake.iOS.txt
Examples_3/Bootstrap/: CMakeLists.txt  main.cpp
Examples_3/Unit_Tests/: 01_Transformations.cmake  CMakeLists.txt
Examples_3/Visibility_Buffer/: CMakeLists.txt
Examples_3/Visibility_Buffer2/: CMakeLists.txt  PathStatement.txt
